fix(ci): try gha cache

--- a/.github/workflows/docker_dev.yml
+++ b/.github/workflows/docker_dev.yml
@@ -109,5 +109,5 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: joewiz/hsg-project:latest
-          cache-from: type=registry,ref=joewiz/hsg-project:buildcache
-          cache-to: type=registry,ref=joewiz/hsg-project:buildcache,mode=max 
+          cache-from: type=gha
+          cache-to: type=gha,mode=max 
